# zk-ai

./: .gitignore  Cargo.toml  LICENSE  README.md  run_all.sh
benchmarks/: benchmark.py
circuits/: inference.circom  model_commit.circom
docs/: architecture.md  getting_started.md  zkml_overview.md
examples/linear_regression/: data.csv  run_demo.sh
examples/sentiment_classifier/: data.csv  run_demo.sh
scripts/: compile_circuits.sh  gen_trusted_setup.sh
src/: inference.rs  lib.rs  model.rs
tests/: basic.rs  inference.rs  model.rs
