[package]
name = "zk-ai"
version = "0.1.0"
edition = "2021"
authors = ["Reynaldi Nurpadilah <your-email@example.com>"]
license = "MIT"
description = "Zero-Knowledge Machine Learning playground"
repository = "https://github.com/reyzxz/zk-ai"

[dependencies]
# ZK libraries (contoh, nanti bisa ditambah sesuai kebutuhan)
ark-std = "0.4"
ark-relations = "0.4"
ark-groth16 = "0.4"
ark-bn254 = "0.4"

# Optional: untuk model handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing
proptest = "1.0"
