[package]
name = "zk-ai"
version = "0.1.0"
edition = "2021"
authors = ["heartless"]
license = "MIT"
description = "Zero-Knowledge Machine Learning playground"
repository = "https://github.com/reyzxz/zk-ai"

[dependencies]
ark-std = "0.4"
ark-relations = "0.4"
ark-groth16 = "0.4"
ark-bn254 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proptest = "1.0"
